fix attempt for header height on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -68,6 +68,7 @@ button {
     padding-right: 20px;
     backdrop-filter: blur(5px);
     z-index: 10;
+    min-height: fit-content;
 
 }
 .header_container #nametag {
@@ -77,7 +78,7 @@ button {
     color: #EEEEEE;
     font-weight: 900;
     text-align: center;
-    line-height: 10vh;
+    margin-top: 2vh;
 }
 .header_container .personal_links {
     display: flex;
@@ -175,7 +176,7 @@ button {
     transition: .5s;
     display: grid;
     grid-template-columns: auto;
-    grid-template-rows: 75px auto auto auto;
+    grid-template-rows: 10vh auto auto auto;
     grid-template-areas: 
     "header header header header"
     "flex_body flex_body flex_body flex_body"
